# IntroductionToSelenium

./: DownloadingMobaXterm with Wget.py  README.md  WorldCinemaAccess.py  couldbeuseful.py  output.txt  pyproject.toml  quotes.txt  titles.txt
BookingScraping/: run.py
BookingScraping/booking/: booking.py  tesseract.py
NotYetIntoProjects/: UdemyScraping.py  functions.py
ScrapingLearnerScripts/: BasicAuthForm.py
WorldsCinemaScraping/: WorldCinema2.py
